<resources>
    <string name="AppName">Dolpy</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="etPassword">Enter your password</string>
    <string name="tvPassword">Password</string>
    <string name="etEmail">Enter your email</string>
    <string name="tvEmail">Email</string>
    <string name="etName">Enter your name</string>
    <string name="tvName">Name</string>
    <string name="etNumber">Enter your phone number</string>
    <string name="tvNumber">Phone Number</string>
    <string name="tvForgotPassword">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="Tono">Kartono Apriliyandi</string>
    <string name="lorem">Lorem pisum dolor sit amet, consectetur adpisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</string>
    <string name="lorem2">Lorem pisum dolor sit amet, consectetur...</string>
    <string name="Erwin">Erwin Gunawan</string>
    <string name="SE">Software Engineering</string>
    <string name="MS">Multimedia System</string>
    <string name="Jolee">Jonathan Lee</string>
    <string name="Shilvi">Shilvia Meidhi Honova</string>
    <string name="tgl">12 Nov 2022 (Diedit 14 Nov 2022)</string>
    <string name="Share">Share with your group...</string>
    <string name="Vanvan">Brigita Vanessa Salim</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_people">Profile</string>
    <string name="title_files">Times</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_bottom_navbar">bottom_navbar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>