<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3F3F3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="62dp">

        <ImageView
            android:id="@+id/LogoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:src="@drawable/dolpy_blue" />

        <TextView
            android:id="@+id/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/LogoApp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/AppName"
            android:textColor="@color/primary_50"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/logInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/register_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:weightSum="2.5">

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/primary_50"
                android:textSize="18sp"
                android:textStyle="bold|normal" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/frame_login"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvName"
            android:textSize="16sp"
            android:fontFamily="@font/sourcesanspro_regular"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/fill_edittext"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/etName"
            android:textColor="@color/black_30"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/tvNumber"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/fill_edittext"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/etNumber"
            android:inputType="phone"
            android:textColor="@color/black_30"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/tvEmail"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/fill_edittext"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/etEmail"
            android:textColor="@color/black_30"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/tvPassword"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/fill_edittext"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:textColor="@color/black_30"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/Reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_button_blue_10"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sourcesanspro_semibold"/>
    </LinearLayout>
</LinearLayout>