<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbarMain"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="25dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_blue10_10"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tvMatKul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/SE"
            android:textColor="@color/black_90"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/Tono"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMatKul1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvMatKul1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_blue10_10"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group1"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tvMatKul2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/MS"
            android:textColor="@color/black_90"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/Jolee"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMatKul2" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvMatKul2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/group_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>